# GloboAnalysis

./: main.py  pyproject.toml
data/processed/: dados_funcionarios_processados.csv
src/: __init__.py  logger.py
src/data/: extract.py  transform.py
